--- a/dashboard/static/css/qc_dashboard.css
+++ b/dashboard/static/css/qc_dashboard.css
@@ -359,7 +359,7 @@ thead {
 /**********************************************
 * Scans page styling
 ***********************************************/
-#comment-container {
+.qc-comment-container {
   display: inline-block;
   width: 100%;
   height: 56px;
@@ -367,22 +367,18 @@ thead {
   padding-bottom: 0px;
 }
 
-#scan-qc-comment {
+.qc-scan-comment {
   display: inline-block;
   max-height: 56px;
 }
 
-#qc-badge {
+.qc-badge {
   padding-top: 12px;
   margin-bottom: 10px;
 }
 
-#scan-qc-status {
+.qc-approved, .qc-flagged, .qc-blacklisted {
   font-size: 1.5em;
-}
-
-#scan-qc-signature {
-  font-size: .7em;
 }
 
 #papaya-nav {
