Small bug fix, removed unused comment

--- a/dashboard/static/css/qc_dashboard.css
+++ b/dashboard/static/css/qc_dashboard.css
@@ -357,7 +357,7 @@ thead {
 }
 
 /**********************************************
-* Scans page styling
+* Timepoint QC styling
 ***********************************************/
 .qc-comment-container {
   display: inline-block;
