[FIX] Moved javascript to separate file, fixed some class names + IDs

--- a/dashboard/blueprints/timepoints/templates/main.html
+++ b/dashboard/blueprints/timepoints/templates/main.html
@@ -79,6 +79,7 @@
   {% block footer_scripts %}
       <script type="text/javascript" src="{{ url_for('ajax_timepoints.static', filename='qc_header.js') }}"></script>
       <script type="text/javascript" src="{{ url_for('ajax_timepoints.static', filename='view_scan.js') }}"></script>
+      <script type="text/javascript" src="{{ url_for('ajax_timepoints.static', filename='slice_timing.js') }}"></script>
   {% endblock %}
 
 {% endblock %}
